test/kubernetes/e2e/features/deployer/testdata/istio-gateway-parameters.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
  annotations:
    gateway.gloo.solo.io/gateway-parameters-name: "gw-params"
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.gloo.solo.io/v1alpha1
kind: GatewayParameters
metadata:
  name: gw-params
spec:
  kube:
    deployment:
      replicas: 1
    istio:
      istioContainer:
        image:
          registry: docker.io/istio
          repository: proxyv2
          tag: 1.20.6 # Override default istio-proxy image tag
